# docs/swagger.yaml
@@ -5,10 +5,16 @@ definitions:
       body:
         description: Content of the note
         type: string
-      encryptionTag:
+      encryption_salt:
+        description: Salt used for client-side encryption
+        type: string
+      encryption_tag:
         description: Tag used for encryption verification
         type: string
-      isEncrypted:
+      encryption_verification_tag:
+        description: Verification tag used for encryption
+        type: string
+      is_encrypted:
         description: Whether the note should be encrypted
         type: boolean
       title:
@@ -40,17 +46,21 @@ definitions:
       body:
         description: Content of the note
         type: string
-      createdAt:
+      created_at:
         description: Unix timestamp of note creation
         type: integer
-      encryptionTag:
+      encryption_salt:
+        description: Salt used for client-side encryption (only included if note is
+          encrypted)
+        type: string
+      encryption_tag:
         description: Tag used for encryption verification (only included if note is
           encrypted)
         type: string
       id:
         description: Unique identifier for the note
         type: integer
-      isEncrypted:
+      is_encrypted:
         description: Whether the note is encrypted
         type: boolean
       slug:
@@ -59,7 +69,7 @@ definitions:
       title:
         description: Title of the note
         type: string
-      updatedAt:
+      updated_at:
         description: Unix timestamp of last note update
         type: integer
     type: object
